# data-playground

./: README.md
frontend-masters/sqlite/: .gitignore  package-lock.json
frontend-masters/sqlite/app/: package-lock.json
frontend-masters/sqlite/tutorial/: package-lock.json
head-first/: head-first-learning-method.md
head-first/data-analysis/: README.md
head-first/data-analysis/03/: bathing-friends-unlimited-solver.ods
head-first/data-analysis/04/: hfda_ch04_home_page1.ods
head-first/data-analysis/07/: hfda_ch07_new_probs.ods
head-first/data-analysis/__notes__/: README.md  index.md
head-first/data-analysis/data/: hfda.R
libraries/newcastle/: README.md
mocking/: README.md
mocking/books/: README.md
mocking/films/: README.md  db.json  films.db  package-lock.json  package.json
mocking/fruits/: README.md  app.py  main.py  piccolo_conf.py  pyproject.toml
mocking/fruits/auth/: authenticate.py  jwt_handler.py
mocking/fruits/bruno/: 00-homepage.bru  01-tasks-all.bru  02-tasks-add-new.bru  03-tasks-update-put.bru  bruno.json  collection.bru  fruits-delete-one.bru  fruits-user-login.bru
mocking/fruits/fruits/: models.py  piccolo_app.py  routes.py  tables.py
mocking/fruits/models/: database.py
mocking/fruits/routes/: fruits.py
mocking/fruits/user/: piccolo_app.py
month-of-lunches/: README.md
reference/: data-analysis-tools.md
teach-yourself-sql/: .gitignore  ANKI.md  README.md
teach-yourself-sql/sql/: 02-retrieving-data.sql  03-sorting-retrieved-data.sql  04-filtering-data.sql  05-filtering-data-advanced.sql  06-wildcard-filtering.sql
(+153 files in other folders)
