[project]
name = "fruits"
version = "0.1.0"
description = "My cool fruits API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
	"passlib[bcrypt]>=1.7.4",
	"piccolo[orjson,sqlite]>=1.28.0",
	"python-decouple>=3.8.0",
	"python-jose>=3.4.0",
	"uvicorn>=0.37.0"
]

[dependency-groups]
database = ["sqlite-utils>=3.38"]
testing  = ["pyright>=1.1.406"]

[tool.pyright]
strict = ["."]
exclude = [".venv"]
